### Added - Resize image options
