# docs/swagger.json
@@ -643,6 +643,12 @@
                 },
                 "extension": {
                     "type": "string"
+                },
+                "height": {
+                    "type": "integer"
+                },
+                "width": {
+                    "type": "integer"
                 }
             }
         },
